--- a/Hitomi-Scroll-Viewer/SearchPage.xaml
+++ b/Hitomi-Scroll-Viewer/SearchPage.xaml
@@ -8,8 +8,8 @@
     xmlns:controls="using:CommunityToolkit.WinUI.UI.Controls"
     mc:Ignorable="d"
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-    <ScrollViewer Padding="24 0">
-        <StackPanel Orientation="Vertical">
+    <ScrollViewer Padding="32 0">
+        <StackPanel Orientation="Vertical" Spacing="16">
             <Grid>
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition/>
@@ -18,16 +18,19 @@
                 <spc:TagContainer x:Name="IncludeTagContainer" Grid.Column="0" IsInclude="True"></spc:TagContainer>
                 <spc:TagContainer x:Name="ExcludeTagContainer" Grid.Column="1" IsInclude="False"></spc:TagContainer>
             </Grid>
-            <Grid Margin="0 10 0 0" ColumnSpacing="20">
+            <Grid ColumnSpacing="32" Height="512">
                 <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="5*"/>
-                    <ColumnDefinition Width="3*"/>
                     <ColumnDefinition Width="4*"/>
+                    <ColumnDefinition Width="3*"/>
+                    <ColumnDefinition Width="3*"/>
+                    <ColumnDefinition Width="Auto"/>
                 </Grid.ColumnDefinitions>
-                <StackPanel Grid.Column="0"
-                            Orientation="Vertical"
-                            Spacing="20">
-                    <Button x:Name="CreateHyperlinkBtn"
+                <Grid Grid.Column="0" RowSpacing="16">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="*"/>
+                    </Grid.RowDefinitions>
+                    <Button x:Name="CreateHyperlinkBtn" Grid.Row="0"
                             Click="CreateHyperlinkBtn_Clicked"
                             MinHeight="80"
                             FontSize="18"
@@ -36,18 +39,36 @@
                             Content="Create and Copy Search Link"
                             IsEnabled="False"
                             />
-                    <ListView x:Name="SearchLinkItemsListView"
+                    <ListView x:Name="SearchLinkItemsListView" Grid.Row="1"
                               ItemsSource="{x:Bind _searchLinkItems}"
-                              SelectionMode="None" IsItemClickEnabled="False"/>
-                </StackPanel>
-                <StackPanel Grid.Column="1" Orientation="Vertical" Spacing="20">
-                    <Grid ColumnSpacing="10" RowSpacing="10" x:Name="DownloadActionGrid">
+                              SelectionMode="None" IsItemClickEnabled="False">
+                        <ListView.ItemsPanel>
+                            <ItemsPanelTemplate>
+                                <StackPanel Spacing="4" Padding="8"></StackPanel>
+                            </ItemsPanelTemplate>
+                        </ListView.ItemsPanel>
+                        <ListView.ItemContainerStyle>
+                            <Style TargetType="ListViewItem" BasedOn="{StaticResource DefaultListViewItemStyle}">
+                                <!--see https://github.com/dotnet/maui/issues/8564
+                                        https://github.com/dotnet/maui/pull/10250
+                                        https://github.com/dotnet/maui/pull/10250/commits/ca8a76576ee3b4f692bd3a3182972120c6c8e071-->
+                                <Setter Property="Padding" Value="0"/>
+                            </Style>
+                        </ListView.ItemContainerStyle>
+                    </ListView>
+                </Grid>
+                <Grid Grid.Column="1" RowSpacing="16">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="*"/>
+                    </Grid.RowDefinitions>
+                    <Grid ColumnSpacing="10" Grid.Row="0">
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="*"/>
                             <ColumnDefinition Width="Auto"/>
                         </Grid.ColumnDefinitions>
                         <TextBox x:Name="GalleryIDTextBox" Grid.Column="0"
-                                 MinHeight="150"
+                                 Height="160"
                                  TextWrapping="Wrap"
                                  AcceptsReturn="True"
                                  PlaceholderText="Enter Gallery id(s) or an URL(s) Here. e.g. 2058075 or https://hitomi.la/..."
@@ -58,57 +79,82 @@
                             <SymbolIcon Symbol="Download"></SymbolIcon>
                         </Button>
                     </Grid>
-                    <ListView x:Name="DownloadItemsListView" ItemsSource="{x:Bind _downloadingItems}"
-                              SelectionMode="None" IsItemClickEnabled="False">
+                    <ListView x:Name="DownloadItemsListView" ItemsSource="{x:Bind DownloadingItems}"
+                              SelectionMode="None" IsItemClickEnabled="False" Grid.Row="1">
                         <ListView.ItemsPanel>
                             <ItemsPanelTemplate>
-                                <StackPanel Spacing="8"></StackPanel>
+                                <StackPanel Spacing="4"></StackPanel>
                             </ItemsPanelTemplate>
                         </ListView.ItemsPanel>
+                        <ListView.ItemContainerStyle>
+                            <Style TargetType="ListViewItem" BasedOn="{StaticResource DefaultListViewItemStyle}">
+                                <!--see https://github.com/dotnet/maui/issues/8564
+                                        https://github.com/dotnet/maui/pull/10250
+                                        https://github.com/dotnet/maui/pull/10250/commits/ca8a76576ee3b4f692bd3a3182972120c6c8e071-->
+                                <Setter Property="Padding" Value="0"/>
+                            </Style>
+                        </ListView.ItemContainerStyle>
                     </ListView>
-                </StackPanel>
-                <Grid Grid.Column="2"
-                      ColumnSpacing="20">
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="*"/>
-                        <ColumnDefinition Width="Auto"/>
-                    </Grid.ColumnDefinitions>
+                </Grid>
+                <Grid Grid.Column="2" RowSpacing="16">
                     <Grid.RowDefinitions>
                         <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="*"/>
                     </Grid.RowDefinitions>
-                    <StackPanel Grid.Column="0" Orientation="Vertical"
-                                Spacing="20">
-                        <TextBox x:Name="TagNameTextBox"
-                                 PlaceholderText="Tag List Name"
-                                 TextWrapping="Wrap"
-                                 FontSize="16"
-                                 />
+                    <TextBox x:Name="TagNameTextBox" Grid.Row="0"
+                             PlaceholderText="Create or rename tag"
+                             TextWrapping="Wrap"
+                             FontSize="16"
+                             MaxLength="16"
+                             />
+                    <Grid Grid.Row="1" ColumnSpacing="16">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="Auto"/>
+                            <ColumnDefinition Width="*"/>
+                        </Grid.ColumnDefinitions>
+                        <TextBlock Grid.Column="0" Text="Select tag to edit:"
+                                   HorizontalAlignment="Center" VerticalAlignment="Center"
+                                   Style="{StaticResource BaseTextBlockStyle}"/>
                         <ComboBox x:Name="TagListComboBox" ItemsSource="{x:Bind _tagsDictKeys}"
-                                      SelectionChanged="TagListComboBox_SelectionChanged"
-                                      HorizontalAlignment="Stretch"/>
-                        <StackPanel MinHeight="50"
-                                    Background="{ThemeResource CardBackgroundFillColorDefaultBrush}"
-                                    BorderBrush="{ThemeResource CardStrokeColorDefaultBrush}"
-                                    CornerRadius="{StaticResource OverlayCornerRadius}"
-                                    BorderThickness="1"
-                                    Padding="16"
-                                    Spacing="16">
-                            <TextBlock HorizontalAlignment="Center" Style="{StaticResource SubtitleTextBlockStyle}">Select tags to create search links</TextBlock>
+                                  Grid.Column="1"
+                                  SelectionChanged="TagListComboBox_SelectionChanged"
+                                  HorizontalAlignment="Stretch"/>
+                    </Grid>
+                    <Grid Grid.Row="2"
+                                Background="{ThemeResource CardBackgroundFillColorDefaultBrush}"
+                                BorderBrush="{ThemeResource CardStrokeColorDefaultBrush}"
+                                CornerRadius="{StaticResource OverlayCornerRadius}"
+                                BorderThickness="1"
+                                Padding="16"
+                                RowSpacing="16">
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="Auto"/>
+                            <RowDefinition Height="*"/>
+                        </Grid.RowDefinitions>
+                        <TextBlock Grid.Row="0"
+                                   Text="Select tags to filter search"
+                                   HorizontalAlignment="Center"
+                                   Style="{StaticResource SubtitleTextBlockStyle}"
+                                   />
+                        <ScrollViewer x:Name="SearchFilterItemsScrollViewer" Grid.Row="1">
                             <ItemsRepeater ItemsSource="{x:Bind _searchFilterItems}">
                                 <ItemsRepeater.Layout>
-                                    <controls:WrapLayout VerticalSpacing="8" HorizontalSpacing="8"/>
+                                    <controls:WrapLayout VerticalSpacing="4" HorizontalSpacing="8"/>
                                 </ItemsRepeater.Layout>
                             </ItemsRepeater>
-                        </StackPanel>
-                    </StackPanel>
-                    <StackPanel x:Name="ControlButtonContainer" Grid.Column="1"
-                                Orientation="Vertical" Spacing="20" Margin="0 0 20 0"/>
+                        </ScrollViewer>
+                    </Grid>
                 </Grid>
+                <Grid x:Name="ControlButtonContainer" Grid.Column="3"
+                            RowSpacing="16"/>
             </Grid>
-            <ComboBox x:Name="BookmarkPageSelector"
-                      HorizontalAlignment="Center"
-                      FontSize="16"/>
-            <StackPanel x:Name="BookmarkPanel" Orientation="Vertical"/>
+            <ComboBox x:Name="BookmarkPageSelector" Grid.Column="1" FontSize="16" HorizontalAlignment="Center">
+                <ComboBox.Header>
+                    <TextBlock Text="Bookmark Page" Style="{StaticResource BaseTextBlockStyle}"/>
+                </ComboBox.Header>
+            </ComboBox>
+            <StackPanel x:Name="BookmarkPanel" Orientation="Vertical" Spacing="16"/>
         </StackPanel>
     </ScrollViewer>
 </Page>
