--- a/Hitomi-Scroll-Viewer/ImageWatchingPage.xaml
+++ b/Hitomi-Scroll-Viewer/ImageWatchingPage.xaml
@@ -4,31 +4,30 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    mc:Ignorable="d">
+    mc:Ignorable="d"
+    Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
     <Grid>
         <ContentControl x:Name="ImageContainer" IsTabStop="False"/>
         <CommandBar x:Name="TopCommandBar"
                     Background="{ThemeResource CardBackgroundFillColorDefaultBrush}"
-                    ClosedDisplayMode="Minimal"
+                    ClosedDisplayMode="Compact"
                     OverflowButtonVisibility="Collapsed"
                     HorizontalAlignment="Center"
                     IsOpen="True">
             <AppBarButton x:Name="GoBackBtn"
-                            MinWidth="50"
-                            Icon="Back"
-                            Label="Go Back"
-                            />
+                          MinWidth="50"
+                          Icon="Back"
+                          Label="Go Back"/>
             <AppBarSeparator MinWidth="30"/>
             <AppBarButton x:Name="RefreshBtn"
-                            MinWidth="50"
-                            Icon="Refresh"
-                            Label="Refresh"
-                            Click="RefreshBtn_Clicked"
-                            />
+                          MinWidth="50"
+                          Icon="Refresh"
+                          Label="Refresh"
+                          Click="RefreshBtn_Clicked"/>
             <AppBarSeparator MinWidth="30"/>
             <AppBarButton x:Name="ViewModeBtn"
-                            MinWidth="120"
-                            Click="ViewModeBtn_Clicked">
+                          MinWidth="120"
+                          Click="ViewModeBtn_Clicked">
                 <AppBarButton.Icon>
                     <FontIcon x:Name="ViewModeBtnIcon" FontFamily="{StaticResource SymbolThemeFontFamily}"/>
                 </AppBarButton.Icon>
