removed tabstop false from ImageContainer

--- a/Hitomi-Scroll-Viewer/ImageWatchingPage.xaml
+++ b/Hitomi-Scroll-Viewer/ImageWatchingPage.xaml
@@ -7,7 +7,7 @@
     mc:Ignorable="d"
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
     <Grid>
-        <ContentControl x:Name="ImageContainer" IsTabStop="False"/>
+        <ContentControl x:Name="ImageContainer"/>
         <CommandBar x:Name="TopCommandBar"
                     Background="{ThemeResource CardBackgroundFillColorDefaultBrush}"
                     ClosedDisplayMode="Compact"
