changed TopCommandBar background

--- a/Hitomi-Scroll-Viewer/ImageWatchingPage.xaml
+++ b/Hitomi-Scroll-Viewer/ImageWatchingPage.xaml
@@ -9,7 +9,7 @@
     <Grid>
         <ContentControl x:Name="ImageContainer"/>
         <CommandBar x:Name="TopCommandBar"
-                    Background="{ThemeResource CardBackgroundFillColorDefaultBrush}"
+                    Background="{ThemeResource LayerFillColorAltBrush}"
                     ClosedDisplayMode="Compact"
                     OverflowButtonVisibility="Collapsed"
                     HorizontalAlignment="Center"
