changed textblock styles using StaticResource

--- a/Hitomi-Scroll-Viewer/SearchPageComponent/TagContainer.xaml
+++ b/Hitomi-Scroll-Viewer/SearchPageComponent/TagContainer.xaml
@@ -21,7 +21,7 @@
             BorderThickness="1" BorderBrush="Black">
         <TextBlock x:Name="Header"
                    HorizontalAlignment="Center" VerticalAlignment="Center"
-                   FontSize="20" FontWeight="Bold">
+                   Style="{StaticResource SubtitleTextBlockStyle}">
         </TextBlock>
     </Border>
 </Grid>
