--- a/Hitomi-Scroll-Viewer/SearchPageComponent/SearchLinkItem.xaml
+++ b/Hitomi-Scroll-Viewer/SearchPageComponent/SearchLinkItem.xaml
@@ -19,7 +19,7 @@
                      HorizontalContentAlignment="Left"
                      VerticalAlignment="Stretch">
         <TextBlock TextWrapping="WrapWholeWords"
-                   FontSize="12"
+                   Style="{StaticResource CaptionTextBlockStyle}"
                    Text="{x:Bind _displayText}"/>
     </HyperlinkButton>
     <Button Grid.Column="1" CommandParameter="{x:Bind}">
